Solved problem with not showing the inscribirse button when reolading site being logged in, and border radius in images

--- a/app/css/estilo.css
+++ b/app/css/estilo.css
@@ -85,6 +85,7 @@ hgroup {
 
 .flyer {
     width: 550px;
+    border-radius: 3px;
 }
 
 a.boton {
